--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -11,12 +11,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'config' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8c56232300c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0moperator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpytrec_eval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/git/plopezgarcia/trec-2018-precision-medicine/python/eval.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mURL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ELASTIC'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ABSTRACTS'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/_search'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mHEADERS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'Content-type'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'application/json'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'config' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "from json2html import *\n",
+    "from IPython.display import HTML\n",
     "import pandas\n",
     "import os\n",
     "import json\n",
-    "import requests\n",
     "import xml.etree.ElementTree\n",
     "import operator\n",
     "import pytrec_eval\n",
@@ -38,12 +52,11 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table border=\"1\"><tr><th>ABSTRACTS</th><td>/abstracts</td></tr><tr><th>ELASTIC</th><td>http://trekkie.ddns.net:9200</td></tr><tr><th>TRIALS</th><td>/trials</td></tr><tr><th>FILENAME</th><td>YEAR.SUBTASK.RUNID.run</td></tr><tr><th>TOPICS_YEAR</th><td>2017</td></tr></table>"
+      ],
       "text/plain": [
-       "{'ABSTRACTS': '/abstracts',\n",
-       " 'ELASTIC': 'http://trekkie.ddns.net:9200',\n",
-       " 'FILENAME': 'YEAR.SUBTASK.RUNID.run',\n",
-       " 'TOPICS_YEAR': '2017',\n",
-       " 'TRIALS': '/trials'}"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "execution_count": 2,
@@ -54,7 +67,7 @@
    "source": [
     "with open('config.json', 'r') as f:\n",
     "    config = json.load(f)\n",
-    "config"
+    "HTML(json2html.convert(json = config))"
    ]
   },
   {
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -377,82 +390,46 @@
        "30  57-year-old female  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "topics_dict, topics_df = eval.get_topics('./topics/topics2017.xml')\n",
-    "qrels = eval.get_qrels('./gold-standard/abstracts.2017.qrels')\n",
-    "assert(len(topics_dict)==len(qrels))\n",
+    "qrels_dict = eval.get_qrels('./gold-standard/abstracts.2017.qrels')\n",
+    "assert(len(topics_dict)==len(qrels_dict))\n",
     "topics_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<Element 'topic' at 0x7fc8e68c4a48>,\n",
-       " <Element 'topic' at 0x7fc8e68c4bd8>,\n",
-       " <Element 'topic' at 0x7fc8e68c4ea8>,\n",
-       " <Element 'topic' at 0x7fc8e6b44818>,\n",
-       " <Element 'topic' at 0x7fc8e6b448b8>,\n",
-       " <Element 'topic' at 0x7fc8e6b44188>,\n",
-       " <Element 'topic' at 0x7fc8e6b44318>,\n",
-       " <Element 'topic' at 0x7fc8e6b444f8>,\n",
-       " <Element 'topic' at 0x7fc8e6b44778>,\n",
-       " <Element 'topic' at 0x7fc8e6c49ef8>,\n",
-       " <Element 'topic' at 0x7fc8e68c2b88>,\n",
-       " <Element 'topic' at 0x7fc8e68c2d18>,\n",
-       " <Element 'topic' at 0x7fc8e68c2ea8>,\n",
-       " <Element 'topic' at 0x7fc8e6bba098>,\n",
-       " <Element 'topic' at 0x7fc8e6bba228>,\n",
-       " <Element 'topic' at 0x7fc8e6bba3b8>,\n",
-       " <Element 'topic' at 0x7fc8e6bba548>,\n",
-       " <Element 'topic' at 0x7fc8e6bba728>,\n",
-       " <Element 'topic' at 0x7fc8e6bba8b8>,\n",
-       " <Element 'topic' at 0x7fc8e6bbaa48>,\n",
-       " <Element 'topic' at 0x7fc8e6bbabd8>,\n",
-       " <Element 'topic' at 0x7fc8e6bbad68>,\n",
-       " <Element 'topic' at 0x7fc8e6bbaef8>,\n",
-       " <Element 'topic' at 0x7fc8e6c51138>,\n",
-       " <Element 'topic' at 0x7fc8e6c512c8>,\n",
-       " <Element 'topic' at 0x7fc8e6c51458>,\n",
-       " <Element 'topic' at 0x7fc8e6c515e8>,\n",
-       " <Element 'topic' at 0x7fc8e6c517c8>,\n",
-       " <Element 'topic' at 0x7fc8e6c51958>,\n",
-       " <Element 'topic' at 0x7fc8e6c51ae8>]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: my_run\n",
+      "TOPIC: 1 Liposarcoma CDK4 Amplification 38-year-old male\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'URL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-38fb2f944937>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrun_dict_pytrec_eval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_output_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'my_run'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopics_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/git/plopezgarcia/trec-2018-precision-medicine/python/eval.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(run_id, topics_dict)\u001b[0m\n\u001b[1;32m     47\u001b[0m           \u001b[0;31m#print(query)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mURL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mHEADERS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;31m#print(response.json())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'URL' is not defined"
+     ]
     }
    ],
    "source": [
-    "URL = config['ELASTIC'] + config['ABSTRACTS'] + '/_search'\n",
-    "HEADERS = {'Content-type': 'application/json'}\n",
-    "\n",
-    "INPUT_TOPICS = xml.etree.ElementTree.parse('./topics/topics'+config['TOPICS_YEAR']+'.xml').getroot().findall('topic')\n",
-    "\n",
-    "topics = {}\n",
-    "run = {}\n",
-    "run_output_file = []\n",
-    "\n",
-    "for t in INPUT_TOPICS:\n",
-    "\n",
-    "    # Read from file\n",
-    "    topic = int(float(t.get('number')))\n",
-    "    topics[topic] = {'topic': topic,\n",
-    "                    'disease': t.find('disease').text,\n",
-    "                    'gene': t.find('gene').text,\n",
-    "                    'demographic': t.find('demographic').text}\n",
-    "INPUT_TOPICS\n"
+    "run_dict_pytrec_eval, run_output_file = eval.run('my_run', topics_dict)"
    ]
   },
   {
