--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -13,16 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "from json2html import *\n",
     "from IPython.display import HTML\n",
-    "import pandas\n",
-    "import os\n",
-    "import xml.etree.ElementTree\n",
-    "import operator\n",
-    "import pytrec_eval\n",
-    "import eval\n",
-    "import utils\n",
-    "import json"
+    "import eval"
    ]
   },
   {
@@ -1101,7 +1095,7 @@
     {
      "data": {
       "text/plain": [
-       "{'P_10': 0.44, 'Rprec': 0.2626, 'ndcg': 0.4779}"
+       "{'ndcg': 0.4779, 'Rprec': 0.2626, 'P_10': 0.44}"
       ]
      },
      "execution_count": 7,
@@ -1137,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
