initial test experiment

--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +73,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME {'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5, 'gene_boost': 1, 'disease_boost': 1.5, 'query_template': 'baseline.json'}\n"
+      "{'gene_tie_breaker': [0.1, 0.5], 'gene_boost': [1, 2, 5], 'disease_boost': [1, 2, 5], 'disease_tie_breaker': [0.1, 0.5], 'query_template': ['variable.json']}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '1', 'disease_boost': '1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3067, 'ndcg': 0.4139, 'Rprec': 0.1952}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '2', 'disease_boost': '1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3033, 'ndcg': 0.4003, 'Rprec': 0.1852}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '5', 'disease_boost': '1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.2933, 'ndcg': 0.3936, 'Rprec': 0.181}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '1', 'disease_boost': '1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3, 'ndcg': 0.3968, 'Rprec': 0.1853}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '2', 'disease_boost': '1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.29, 'ndcg': 0.389, 'Rprec': 0.1804}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '5', 'disease_boost': '1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.28, 'ndcg': 0.3843, 'Rprec': 0.179}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '1', 'disease_boost': '2', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3067, 'ndcg': 0.4139, 'Rprec': 0.1952}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '2', 'disease_boost': '2', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3033, 'ndcg': 0.4003, 'Rprec': 0.1852}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '5', 'disease_boost': '2', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.2933, 'ndcg': 0.3936, 'Rprec': 0.181}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '1', 'disease_boost': '2', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3, 'ndcg': 0.3968, 'Rprec': 0.1853}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '2', 'disease_boost': '2', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.29, 'ndcg': 0.389, 'Rprec': 0.1804}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '5', 'disease_boost': '2', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.28, 'ndcg': 0.3843, 'Rprec': 0.179}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '1', 'disease_boost': '5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3067, 'ndcg': 0.4139, 'Rprec': 0.1952}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '2', 'disease_boost': '5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3033, 'ndcg': 0.4003, 'Rprec': 0.1852}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '5', 'disease_boost': '5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.2933, 'ndcg': 0.3936, 'Rprec': 0.181}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '1', 'disease_boost': '5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3, 'ndcg': 0.3968, 'Rprec': 0.1853}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '2', 'disease_boost': '5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.29, 'ndcg': 0.389, 'Rprec': 0.1804}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '5', 'disease_boost': '5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.28, 'ndcg': 0.3843, 'Rprec': 0.179}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '1', 'disease_boost': '1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4533, 'ndcg': 0.5154, 'Rprec': 0.2568}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '2', 'disease_boost': '1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4233, 'ndcg': 0.4712, 'Rprec': 0.2306}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '5', 'disease_boost': '1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.33, 'ndcg': 0.427, 'Rprec': 0.201}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '1', 'disease_boost': '1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4067, 'ndcg': 0.482, 'Rprec': 0.241}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '2', 'disease_boost': '1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3533, 'ndcg': 0.4425, 'Rprec': 0.2113}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '5', 'disease_boost': '1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.31, 'ndcg': 0.4083, 'Rprec': 0.1892}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '1', 'disease_boost': '2', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4533, 'ndcg': 0.5154, 'Rprec': 0.2568}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '2', 'disease_boost': '2', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4233, 'ndcg': 0.4712, 'Rprec': 0.2306}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '5', 'disease_boost': '2', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.33, 'ndcg': 0.427, 'Rprec': 0.201}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '1', 'disease_boost': '2', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4067, 'ndcg': 0.482, 'Rprec': 0.241}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '2', 'disease_boost': '2', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3533, 'ndcg': 0.4425, 'Rprec': 0.2113}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '5', 'disease_boost': '2', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.31, 'ndcg': 0.4083, 'Rprec': 0.1892}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '1', 'disease_boost': '5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4533, 'ndcg': 0.5154, 'Rprec': 0.2568}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '2', 'disease_boost': '5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4233, 'ndcg': 0.4712, 'Rprec': 0.2306}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.1', 'gene_boost': '5', 'disease_boost': '5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.33, 'ndcg': 0.427, 'Rprec': 0.201}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '1', 'disease_boost': '5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.4067, 'ndcg': 0.482, 'Rprec': 0.241}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '2', 'disease_boost': '5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.3533, 'ndcg': 0.4425, 'Rprec': 0.2113}\n",
+      "RUN: FIXME {'gene_tie_breaker': '0.5', 'gene_boost': '5', 'disease_boost': '5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json'}\n",
+      "{'P_10': 0.31, 'ndcg': 0.4083, 'Rprec': 0.1892}\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval.experiment(topics_df, qrels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: FIXME {'gene_tie_breaker': 0.5, 'gene_boost': 1, 'disease_boost': 1.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json'}\n"
      ]
     }
    ],
@@ -90,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,31 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "results, aggregated = eval.evaluate(qrels, run_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aggregated"
    ]
   },
   {
@@ -134,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6888840985776884"
+       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338}"
       ]
      },
      "execution_count": 10,
@@ -143,35 +212,8 @@
     }
    ],
    "source": [
-    "results['1']['ndcg']"
+    "aggregated"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6298053155348644"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results['3']['ndcg']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
