--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -17,7 +17,6 @@
     "from json2html import *\n",
     "from IPython.display import HTML\n",
     "import eval\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import pandas"
    ]
   },
@@ -43,83 +42,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load TOPICS and GOLD STANDARD from last year (30 topics)"
+    "## Load and split TOPICS and GOLD STANDARD from last year (30 topics)\n",
+    "Also, split them into training, test, and development set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "topics_df = eval.get_topics('./topics/topics2017.xml')\n",
-    "topics_train, topics_test = train_test_split(topics_df, test_size=0.1)"
+    "topics_train, topics_test, topics_dev = eval.split_topics(topics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qrels = eval.get_qrels('./gold-standard/sorted.abstracts.2017.qrels')\n",
+    "qrels_train, qrels_test, qrels_dev = eval.split_qrels(qrels, topics_train, topics_test, topics_dev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verify that the split in topics and qrels match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(set([str(topic) for topic in topics_train['topic']])==set(qrels_train.keys()))\n",
+    "assert(set([str(topic) for topic in topics_test['topic']])==set(qrels_test.keys()))\n",
+    "assert(set([str(topic) for topic in topics_dev['topic']])==set(qrels_dev.keys()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test run with default_params"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: FIXME TOPICS: 12 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5, 'gene_boost': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "training_run_df, training_run_params = eval.run(topics_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "qrels = eval.get_qrels('./gold-standard/sorted.abstracts.2017.qrels')\n",
-    "qrels_train, qrels_test = eval.split_qrels(qrels, topics_train, topics_test)"
+    "training_results, training_aggregated = eval.evaluate(qrels_train, training_run_df)\n",
+    "training_score = pandas.Series(training_aggregated, name='training ' + '(' + str(len(qrels_train)) + ' topics)')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert(set(topics_train['topic'])==set(qrels_train.keys()))\n",
-    "assert(set(topics_test['topic'])==set(qrels_test.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME {'query_template': 'baseline.json', 'disease_tie_breaker': 0.5, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'gene_boost': 1}\n",
-      "TOPIC: 30\n",
-      "TOPIC: 17\n",
-      "TOPIC: 20\n",
-      "TOPIC: 2\n",
-      "TOPIC: 15\n",
-      "TOPIC: 26\n",
-      "TOPIC: 22\n",
-      "TOPIC: 6\n",
-      "TOPIC: 13\n",
-      "TOPIC: 10\n",
-      "TOPIC: 23\n",
-      "TOPIC: 25\n",
-      "TOPIC: 3\n",
-      "TOPIC: 28\n",
-      "TOPIC: 24\n",
-      "TOPIC: 27\n",
-      "TOPIC: 12\n",
-      "TOPIC: 9\n",
-      "TOPIC: 16\n",
-      "TOPIC: 4\n",
-      "TOPIC: 19\n"
+      "RUN: FIXME TOPICS: 9 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5, 'gene_boost': 1}\n"
      ]
     }
    ],
    "source": [
-    "run_df, run_params = eval.run(topics_train)"
+    "test_run_df, test_run_params = eval.run(topics_test, training_run_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_results, test_aggregated = eval.evaluate(qrels_test, test_run_df)\n",
+    "test_score = pandas.Series(test_aggregated, name='training ' + '(' + str(len(qrels_test)) + ' topics)')"
+   ]
   },
   {
    "cell_type": "code",
@@ -128,8 +152,51 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P_10</th>\n",
+       "      <th>Rprec</th>\n",
+       "      <th>ndcg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>training</th>\n",
+       "      <td>0.4417</td>\n",
+       "      <td>0.2758</td>\n",
+       "      <td>0.4926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test</th>\n",
+       "      <td>0.5000</td>\n",
+       "      <td>0.3014</td>\n",
+       "      <td>0.6002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'ndcg': 0.5207, 'Rprec': 0.2783, 'P_10': 0.5048}"
+       "            P_10   Rprec    ndcg\n",
+       "training  0.4417  0.2758  0.4926\n",
+       "test      0.5000  0.3014  0.6002"
       ]
      },
      "execution_count": 10,
@@ -138,88 +205,16 @@
     }
    ],
    "source": [
-    "training_results, training_aggregated = eval.evaluate(qrels, run_df)\n",
-    "training_aggregated"
+    "pandas.DataFrame([training_score, test_score])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'query_template': 'baseline.json',\n",
-       " 'disease_tie_breaker': 0.5,\n",
-       " 'disease_boost': 1.5,\n",
-       " 'gene_tie_breaker': 0.5,\n",
-       " 'gene_boost': 1}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_results, test_aggregated = eval.evaluate(qrels, run_df)\n",
-    "training_aggregated\n",
-    "run_df, run_params = eval.run(topics_test, run_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval.experiment(topics_df, qrels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_df = eval.run(topics_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#run_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results, aggregated = eval.evaluate(qrels, run_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aggregated"
+    "#eval.experiment(topics_df, qrels)"
    ]
   }
  ],
@@ -239,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
