--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 12 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5, 'gene_boost': 1}\n"
+      "RUN: FIXME TOPICS: 12 {'gene_boost': 1, 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5}\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 9 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5, 'gene_boost': 1}\n"
+      "RUN: FIXME TOPICS: 9 {'gene_boost': 1, 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5}\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "test_results, test_aggregated = eval.evaluate(qrels_test, test_run_df)\n",
-    "test_score = pandas.Series(test_aggregated, name='training ' + '(' + str(len(qrels_test)) + ' topics)')"
+    "test_score = pandas.Series(test_aggregated, name='test ' + '(' + str(len(qrels_test)) + ' topics)')"
    ]
   },
   {
@@ -178,25 +178,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>training</th>\n",
-       "      <td>0.4417</td>\n",
-       "      <td>0.2758</td>\n",
-       "      <td>0.4926</td>\n",
+       "      <th>training (12 topics)</th>\n",
+       "      <td>0.4583</td>\n",
+       "      <td>0.2680</td>\n",
+       "      <td>0.5378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>test</th>\n",
-       "      <td>0.5000</td>\n",
-       "      <td>0.3014</td>\n",
-       "      <td>0.6002</td>\n",
+       "      <th>training (9 topics)</th>\n",
+       "      <td>0.4333</td>\n",
+       "      <td>0.2878</td>\n",
+       "      <td>0.5403</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            P_10   Rprec    ndcg\n",
-       "training  0.4417  0.2758  0.4926\n",
-       "test      0.5000  0.3014  0.6002"
+       "                        P_10   Rprec    ndcg\n",
+       "training (12 topics)  0.4583  0.2680  0.5378\n",
+       "training (9 topics)   0.4333  0.2878  0.5403"
       ]
      },
      "execution_count": 10,
