--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -62,16 +62,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topics_train, topics_test, topics_dev = eval.split_topics(topics_all)\n"
+    "topics_train, topics_test, topics_dev = eval.split_topics(topics_all)\n",
+    "qrels_train, qrels_test, qrels_dev = eval.split_qrels(qrels_all, topics_train, topics_test, topics_dev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qrels_train, qrels_test, qrels_dev = eval.split_qrels(qrels_all, topics_train, topics_test, topics_dev)"
+    "assert(set([topic for topic in topics_train['topic']])==set([topic for topic in qrels_train['topic']]))\n",
+    "assert(set([topic for topic in topics_test['topic']])==set([topic for topic in qrels_test['topic']]))\n",
+    "assert(set([topic for topic in topics_dev['topic']])==set([topic for topic in qrels_dev['topic']]))"
    ]
   },
   {
@@ -119,24 +122,6 @@
    "outputs": [],
    "source": [
     "#full_run_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Verify that the split in topics and qrels match"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert(set([topic for topic in topics_train['topic']])==set([topic for topic in qrels_train['topic']]))\n",
-    "assert(set([topic for topic in topics_test['topic']])==set([topic for topic in qrels_test['topic']]))\n",
-    "assert(set([topic for topic in topics_dev['topic']])==set([topic for topic in qrels_dev['topic']]))"
    ]
   },
   {
@@ -198,10 +183,10 @@
     {
      "data": {
       "text/plain": [
-       "recall_1000    0.6560\n",
-       "ndcg           0.5943\n",
-       "Rprec          0.3069\n",
-       "P_10           0.6250\n",
+       "recall_1000    0.5140\n",
+       "ndcg           0.4705\n",
+       "Rprec          0.2305\n",
+       "P_10           0.4250\n",
        "Name: training (12 topics), dtype: float64"
       ]
      },
@@ -259,26 +244,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>training (12 topics)</th>\n",
-       "      <td>0.6560</td>\n",
-       "      <td>0.5943</td>\n",
-       "      <td>0.3069</td>\n",
-       "      <td>0.6250</td>\n",
+       "      <td>0.5140</td>\n",
+       "      <td>0.4705</td>\n",
+       "      <td>0.2305</td>\n",
+       "      <td>0.425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test (9 topics)</th>\n",
-       "      <td>0.6236</td>\n",
-       "      <td>0.4958</td>\n",
-       "      <td>0.2520</td>\n",
-       "      <td>0.3556</td>\n",
+       "      <td>0.6103</td>\n",
+       "      <td>0.5633</td>\n",
+       "      <td>0.3188</td>\n",
+       "      <td>0.600</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      recall_1000    ndcg   Rprec    P_10\n",
-       "training (12 topics)       0.6560  0.5943  0.3069  0.6250\n",
-       "test (9 topics)            0.6236  0.4958  0.2520  0.3556"
+       "                      recall_1000    ndcg   Rprec   P_10\n",
+       "training (12 topics)       0.5140  0.4705  0.2305  0.425\n",
+       "test (9 topics)            0.6103  0.5633  0.3188  0.600"
       ]
      },
      "execution_count": 15,
