--- a/python/recall_test.ipynb
+++ b/python/recall_test.ipynb
@@ -62,15 +62,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "qrels_relev = qrels[(qrels.relev==2)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +86,7 @@
        "{'recall_1000': 0.8205, 'ndcg': 0.7551, 'Rprec': 0.4231, 'P_10': 0.9}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +107,7 @@
        "{'recall_1000': 0.6676, 'ndcg': 0.685, 'Rprec': 0.3906, 'P_10': 0.9}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,6 +116,145 @@
     "results, aggregated = eval.evaluate(qrels[(qrels.relev.isin([1,2]))], run)\n",
     "aggregated"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check relevant documments missed and why (for topic 2 for example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'15735008',\n",
+       " '17517901',\n",
+       " '18097554',\n",
+       " '18098337',\n",
+       " '21457162',\n",
+       " '21681432',\n",
+       " '22899370',\n",
+       " '22972628',\n",
+       " '23015072',\n",
+       " '23071293',\n",
+       " '23112547',\n",
+       " '23375249',\n",
+       " '23462926',\n",
+       " '23763264',\n",
+       " '24522186',\n",
+       " '24778007',\n",
+       " '24805134',\n",
+       " '25073438',\n",
+       " '25696788',\n",
+       " '25924923',\n",
+       " '26184520',\n",
+       " '26371285',\n",
+       " '26623049',\n",
+       " '27099668',\n",
+       " 'AACR_2014-2009',\n",
+       " 'AACR_2017-4639',\n",
+       " 'AACR_2017-5162',\n",
+       " 'ASCO_60628-101'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_set = set(run[(run.TOPIC_NO==2)].ID)\n",
+    "qrels_set = set(qrels[(qrels.relev.isin([2]))].doc_id)\n",
+    "qrels_set.difference(run_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>topic</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>gene1</th>\n",
+       "      <th>gene2</th>\n",
+       "      <th>gene3</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Colon cancer</td>\n",
+       "      <td>KRAS (G13D), BRAF (V600E)</td>\n",
+       "      <td>KRAS (G13D)</td>\n",
+       "      <td>BRAF (V600E)</td>\n",
+       "      <td></td>\n",
+       "      <td>male</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   topic       disease                       gene        gene1          gene2  \\\n",
+       "2      2  Colon cancer  KRAS (G13D), BRAF (V600E)  KRAS (G13D)   BRAF (V600E)   \n",
+       "\n",
+       "  gene3   sex age  \n",
+       "2        male  52  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topics[(topics.topic==2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
